@@ -1,3 +1,9 @@
+2024-01-15T04:12:31Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7524230180 # 48
+* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2024-01-15
+* notice: query file size: 26207
+* notice: accum prev / next / diff: re vi: 0 2976 / 0 2978 / +0 +2
+
 2024-01-15T00:48:20Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7522852313 # 47
 * notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2024-01-15
